mb conflciting changes brewing

--- a/simple.html
+++ b/simple.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--
 	Copyright 2024 Git.Training
-	Adding changes before rebasing conflicts.
+	Silly master branch changes.
 -->
 <head>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
