--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2024 Git.Training
 -->
 <head>
-	<title>Lots of trouble in a little repo</title>
+	<title>Updating title for stash example</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Just some content
+			Just some content. Plus, some more even more important content. Ooh, aah.
 		</p>
 	</main>
 	<footer class="container">
