--- a/simple.html
+++ b/simple.html
@@ -3,7 +3,7 @@
 	Copyright 2024 Git.Training
 -->
 <head>
-	<title>Updating title for stash example</title>
+	<title>Updating title for stash example, again...</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
